# rnetmgr

./: Cargo.toml  LICENSE.Apache  README.md  appsdk_builder  build.rs  negmgr.json  rnetmgr.json
.github/workflows/: ci.yml  release.yml
.vim/: coc-settings.json
sample/: dhcp4-template.conf
scripts/: config_route
src/: dhcp4-template.conf  lib.rs  logger.rs  main.rs  netif.rs  netif_mon.rs  netinfo.rs  rnetmgr_error.rs
