[package]
name = "rnetmgr"
version = "0.1.1"
description = "A simple network manager."
authors = ["Seimizu Joukan <joukan.seimizu@gmail.com>"]
edition = "2018"
repository = "https://gitlab.com/joukan/netmgr.git"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rnetmgr_lib"
path = "src/lib.rs"

[[bin]]
name = "rnetmgr"
path = "src/main.rs"

[dependencies]
futures = "0.3.19"
netlink-packet-core = "0.4.1"
netlink-packet-route = "0.10.0"
rtnetlink = "0.9.0"
ipnetwork = "0.18.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "3.0.0-beta.4"
tokio = {version = "1", features = ["full"]}
cfg-if = "1.0.0"
bytes = {version = "1.1.0", optional = true }
ipcon-sys = { version="0.2.2", features = ["async"], optional=true}
error-stack = "0.3.1"
jlogger-tracing = "0.1.4"
tracing = "0.1.37"

[build-dependencies]
jlogger-tracing = "0.1.4"

[features]
default = []
enable_ipcon = ["ipcon-sys", "bytes" ]
